<resources>
    <string name="app_name">AreaChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">AreaChat</string>

    <!-- Strings related to login -->
    <string name="prompt_userame">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">E-mail</string>
    <string name="sign_in">Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_send_message">Can not send message to user!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_selector">SelectorActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register_label">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
